--- a/intro-web-3/ejercicios/ejercicio2.css
+++ b/intro-web-3/ejercicios/ejercicio2.css
@@ -25,6 +25,7 @@ am{
 }
 .cal3  { float: center; width: 200px; margin: -150px 10px; }
 .cal4  { float: center; width: 200px; margin: -150px 10px; }
+.cal5  { float: center; width: 200px; margin: -150px 10px; }
 p{
     border:3px solid rgb(189, 16, 10);
 }
